[package]
name = "serdoc"
version = "0.1.0"
edition = "2021"
description = "An experiment to serialize Rust structs to TOML, while preserving field docstrings."
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
documented = "0.2.0"
figment = { version = "0.10.12", features = ["toml"] }
pretty_assertions = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
struct-field-names-as-array = "0.3.0"
toml_edit = { version = "0.21.0", features = ["serde"] }
